data/derived/comb/progs/unify/prog6200.ml.out
Characters 16-17:
  let _ = bigMul [9;9;9;9] [9;9;9;9];;
                  ^
Error: This expression has type int but an expression was expected of type
         'a list
